# obs_hotkeys

./: Cargo.toml  LICENSE  README.md
pkgbuild/: .SRCINFO  PKGBUILD
src/: main.rs
