[package]
name = "obs_hotkeys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.0.32", features = ["derive"] }
obws = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
shellexpand = "3.0.0"
tokio = { version = "1.23.0", features = ["full"] }
