[package]
name = "obs_hotkeys"
version = "1.0.1"
edition = "2021"
authors = ["Nabos <nabos@glargh.fr>"]
description = "This tool allows you to integrate your OBS setup into a bigger architecture via CLI commands"
license = "MIT"
repository = "https://github.com/nab-os/obs_hotkeys"
homepage = "https://github.com/nab-os/obs_hotkeys"
keywords = ["cli", "obs"]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
argh = "0.1.12"
obws = "0.10.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.16"
shellexpand = "3.0.0"
tokio = { version = "1.23.0", features = ["full"] }
